--- a/src/main/webapp/member/changepassword.xhtml
+++ b/src/main/webapp/member/changepassword.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="content">
         <div id="indexpage">
             <div class="indexpage-content">
-                <h1>#{i18n['Login Information']}</h1>
+                <h1>#{i18n['Change Password']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
@@ -17,13 +17,18 @@
                     </div>
                     <div class="ui-g-9">
                         <h:form>
-                            <h:panelGrid columns="2">
-                                <p:outputLabel for="email" value="#{i18n['E-mail Address']}"/>
-                                <p:inputText id="email" value="#{profileBean.selectedRecord.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
-                                <p:outputLabel for="password" value="#{i18n['Password']}"/>
-                                <p:inputText id="password" value="#{profileBean.selectedRecord.password}" label="#{i18n['Password']}" placeholder="#{i18n['Password']}" required="true"/>
+                            <h:panelGrid columns="2" cellpadding="5">                   
+                                <p:outputLabel for="password" value="#{i18n['Current Password']}"/>
+                                <p:password id="password" value="#{profileBean.passwordCurrent}" label="#{i18n['Current Password']}" placeholder="#{i18n['Current Password']}" required="true" />
+
+                                <h:outputLabel for="pwd1" value="#{i18n['New Password']}" />
+                                <p:password id="pwd1" value="#{profileBean.passwordNew}" match="pwd2" label="#{i18n['New Password']}" placeholder="#{i18n['New Password']}" required="true" />
+
+                                <h:outputLabel for="pwd2" value="#{i18n['New Password (Again)']}" />
+                                <p:password id="pwd2" value="#{profileBean.passwordNew}" label="#{i18n['New Password (Again)']}" placeholder="#{i18n['New Password (Again)']}" required="true" />
+
                                 <f:facet name="footer">
-                                    <p:commandButton value="#{i18n['Update']}" actionListener="#{profileBean.doUpdateRecord}" update="@form, :growl"/>
+                                    <p:commandButton value="#{i18n['Update']}" actionListener="#{profileBean.doUpdatePassword}" update="@form, :growl"/>
                                 </f:facet>
                             </h:panelGrid>
                         </h:form>
