--- a/src/main/webapp/member/membershipinformation.xhtml
+++ b/src/main/webapp/member/membershipinformation.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="content">
         <div id="indexpage">
             <div class="indexpage-content">
-                <h1>#{i18n['Personal Information']}</h1>
+                <h1>#{i18n['Membership Information']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
@@ -17,12 +17,18 @@
                     </div>
                     <div class="ui-g-9">
                         <h:form>
-                            <h:panelGrid columns="2">
+                            <h:panelGrid columns="2" cellpadding="5">                   
                                 <p:outputLabel for="firstname" value="#{i18n['Firstname']}"/>
                                 <p:inputText id="firstname" value="#{profileBean.selectedRecord.firstname}" label="#{i18n['Firstname']}" placeholder="#{i18n['Firstname']}" required="true"/>
                                 <p:outputLabel for="lastname" value="#{i18n['Lastname']}"/>
                                 <p:inputText id="lastname" value="#{profileBean.selectedRecord.lastname}" label="#{i18n['Lastname']}" placeholder="#{i18n['Lastname']}" required="true"/>
-                                <p:commandButton value="#{i18n['Update']}" actionListener="#{profileBean.doUpdateRecord}" update="@form, :growl"/>
+                                <p:outputLabel for="email" value="#{i18n['E-mail Address']}"/>
+                                <p:inputText id="email" value="#{profileBean.selectedRecord.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
+                                <p:outputLabel for="mailing" value="#{i18n['Mailing']}"/>
+                                <p:selectBooleanCheckbox id="mailing" value="#{profileBean.selectedRecord.mailing}" label="#{i18n['Mailing']}" itemLabel="#{i18n['I want to be informed about the campaign and products']}" />
+                                <f:facet name="footer">
+                                    <p:commandButton value="#{i18n['Update']}" actionListener="#{profileBean.doUpdateRecord}" update="@form, :growl"/>
+                                </f:facet>
                             </h:panelGrid>
                         </h:form>
                     </div>
