--- a/src/main/webapp/resources/composite/navigationMember.xhtml
+++ b/src/main/webapp/resources/composite/navigationMember.xhtml
@@ -14,36 +14,14 @@
     <composite:implementation>
         <h:form>
             <p:menu>
-                <p:submenu label="#{i18n['Profile']}">
-                    <p:menuitem outcome="/member/logininformation" value="#{i18n['Login Information']}" />
-                    <p:menuitem outcome="/member/personalinformation" value="#{i18n['Personal Information']}" />
-                </p:submenu>
-                <p:submenu label="#{i18n['Account']}">
-                    <p:menuitem outcome="/member/address" value="#{i18n['Postal Addresses']}" />
-                    <p:menuitem action="shopping" value="#{i18n['Shopping Basket']}" />
-                    <p:menuitem outcome="/member/sale/index" value="#{i18n['Orders']}" />
-                </p:submenu>
-                <p:menuitem outcome="/member/ticket/index" value="#{i18n['Tickets']}" />
+                <p:menuitem outcome="/member/membershipinformation" value="#{i18n['Membership Information']}" />
+                <p:menuitem outcome="/member/address" value="#{i18n['Postal Addresses']}" />
+                <p:menuitem outcome="/member/sale/index" value="#{i18n['Orders']}" />
+                <p:menuitem action="shopping" value="#{i18n['Shopping Basket']}" />
+                <p:menuitem outcome="/member/ticket/index" value="#{i18n['Messages']}" />
+                <p:menuitem outcome="/member/changepassword" value="#{i18n['Change Password']}" />
+                <p:menuitem action="#{loginBean.doLogout}" value="#{i18n['Logout']}" />
             </p:menu>
-
-            <dl>
-                <dt>#{i18n['Profile']}</dt>
-                <dd><p:link outcome="/member/logininformation" value="#{i18n['Login Information']}"/></dd>
-                <dd><p:link outcome="/member/personalinformation" value="#{i18n['Personal Information']}"/></dd>
-            </dl>
-            <dl>
-                <dt>#{i18n['Account']}</dt>
-                <dd><p:link outcome="/member/address" value="#{i18n['Postal Addresses']}"/></dd>
-                <dd><p:commandLink action="shopping" value="#{i18n['Shopping Basket']}"/></dd>
-                <dd><p:link outcome="/member/sale/index" value="#{i18n['Orders']}"/></dd>
-            </dl>
-            <dl>
-                <dt>#{i18n['Customer Service']}</dt>
-                <dd><p:link outcome="/member/ticket/index" value="#{i18n['Tickets']}"/></dd>
-            </dl>
-
         </h:form>
-
     </composite:implementation>
-
 </html>
