--- a/src/main/webapp/member/sale/show.xhtml
+++ b/src/main/webapp/member/sale/show.xhtml
@@ -70,13 +70,11 @@
                                     <h:outputText style="display:block;" title="#{i18n['IPN_TOTAL']}" value="#{of:formatCurrency(saleline.IPN_TOTAL, saleView.selectedRecord.currency)}"/>
                                     <h:outputText style="display:block;" title="#{i18n['Unit Price']}" value="#{of:formatCurrency(saleline.IPN_PRICE, saleView.selectedRecord.currency)}"/>
                                     <h:outputText style="display:block;" title="#{i18n['Unit Tax']}" value="#{of:formatCurrency(saleline.IPN_VAT, saleView.selectedRecord.currency)}"/>
-                                    <h:outputText style="display:block;" title="#{i18n['Unit Discount']}" value="#{of:formatCurrency(saleline.IPN_DISCOUNT, saleView.selectedRecord.currency)}"/>
                                 </p:column>
                                 <p:column headerText="#{i18n['Amount']}">
                                     <h:outputText style="display:block;" title="#{i18n['doCalculateSubtotal']}" value="#{of:formatCurrency(saleView.doCalculateSubtotal(saleline), saleView.selectedRecord.currency)}"/>
                                     <h:outputText style="display:block;" title="#{i18n['Amount']}" value="#{of:formatCurrency(saleline.priceTotalBeforeTax, saleView.selectedRecord.currency)}"/>
                                     <h:outputText style="display:block;" title="#{i18n['Tax']}" value="#{of:formatCurrency(saleline.taxTotal, saleView.selectedRecord.currency)}"/>
-                                    <h:outputText style="display:block;" title="#{i18n['Discount']}" value="#{of:formatCurrency(saleline.discountTotal, saleView.selectedRecord.currency)}"/>
                                 </p:column>
                                 <p:column headerText="#{i18n['Action']}">
                                     <p:commandLink value="#{i18n['Return']}" update="editForm" oncomplete="PF('editDialog').show()">
@@ -97,31 +95,24 @@
                             <h:outputText value="#{i18n['Tax Total']}"/>
                             <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.taxTotal, saleView.selectedRecord.currency)}"/>
 
-                            <h:outputText value="#{i18n['Discount Total']}"/>
-                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.discountTotal, saleView.selectedRecord.currency)}"/>
-
                             <h:outputText value="#{i18n['General Total']}"/>
-                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.priceTotalAfterTaxAfterDiscount, saleView.selectedRecord.currency)}"/>
+                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.priceTotalAfterTax, saleView.selectedRecord.currency)}"/>
 
                             <p:separator/>
                             <p:separator/>
 
-                            <h:panelGroup rendered="#{saleView.selectedRecord.PAYMETHOD_CODE eq 'CCVISAMC'}">
+                            <h:panelGroup rendered="#{saleView.selectedRecord.paymentMethod eq 'CCVISAMC'}">
                                 <h:outputFormat value="{0} - {1} {2} - {3}">
                                     <f:param value="#{i18n['Delay Interest']}"/>
                                     <f:param value="#{saleView.selectedRecord.IPN_INSTALLMENTS_NUMBER}"/>
                                     <f:param value="#{i18n['Installment']}"/>
                                     <f:param value="#{saleView.selectedRecord.IPN_INSTALLMENTS_PROGRAM}"/>
                                 </h:outputFormat>
-                                <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.IPN_COMMISSION, saleView.selectedRecord.currency)}"/>
                             </h:panelGroup>
 
-                            <h:outputText value="#{i18n['Shipping Cost']}"/>
-                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.IPN_SHIPPING, saleView.selectedRecord.currency)}"/>
-
                             <h:outputText value="#{i18n['General Total']}"/>
-                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.priceTotalAfterTax + saleView.selectedRecord.IPN_SHIPPING - saleView.selectedRecord.IPN_GLOBALDISCOUNT, saleView.selectedRecord.currency)}" rendered="#{saleView.selectedRecord.PAYMETHOD_CODE eq 'WIRE'}"/>
-                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.IPN_TOTALGENERAL, saleView.selectedRecord.currency)}" rendered="#{saleView.selectedRecord.PAYMETHOD_CODE eq 'CCVISAMC'}"/>
+                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.priceTotalAfterTax, saleView.selectedRecord.currency)}" rendered="#{saleView.selectedRecord.paymentMethod eq 'WIRE'}"/>
+                            <h:outputText value="#{of:formatCurrency(saleView.selectedRecord.IPN_TOTALGENERAL, saleView.selectedRecord.currency)}" rendered="#{saleView.selectedRecord.paymentMethod eq 'CCVISAMC'}"/>
                         </h:panelGrid>
                     </div>
                 </div>
