--- a/src/main/webapp/contracts/omega-layout/template_landing.xhtml
+++ b/src/main/webapp/contracts/omega-layout/template_landing.xhtml
@@ -181,7 +181,14 @@
             </h:form>
 
             <h:outputScript name="js/master.js"/>
-
+            <script type="text/javascript">
+                $(function () {
+                    $('#menu-button').on('click', function (e) {
+                        $('#menu').toggleClass('overlay-menu');
+                        e.preventDefault();
+                    });
+                });
+            </script>
             <script>
                 (function (i, s, o, g, r, a, m) {
                     i['GoogleAnalyticsObject'] = r;
