--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -33,7 +33,7 @@
                             <f:param name="id" value="#{product.id}"/>
                             <f:param name="slug" value="#{product.slug}"/>
                             <figure>
-                                <p:graphicImage name="#{product.image.name}" alt="#{product.name}" title="#{product.name}" rendered="#{not empty product.image}" />
+                                <p:graphicImage value="/product/#{product.image.name}" alt="#{product.name}" title="#{product.name}" rendered="#{not empty product.image}" />
                                 <figcaption>
                                     <p><h:outputText value="#{product.name}"/></p>
                                     <small><h:outputText value="#{of:formatCurrency(productBean.getPriceTaxedExchanged(product, 1), currencyBean.currency.currencyCode)}"/></small>
